[tool.poetry]
name = "pyspark-tests"
version = "0.1.0"
description = ""
authors = ["Egor Mateshuk <e.mateshuk@gmail.com>"]
readme = "README.md"
packages = [{include = "pyspark_tests"}]

[tool.poetry.dependencies]
python = "^3.8"
pyspark = "^3.4.0"


[tool.poetry.group.dev.dependencies]
chispa = "^0.9.2"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
